--- a/LifeGame_/LifeGame.csproj
+++ b/LifeGame_/LifeGame.csproj
@@ -41,8 +41,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="Action.cs" />
+    <Compile Include="CellState.cs" />
+    <Compile Include="ExitInput.cs" />
+    <Compile Include="ICommand.cs" />
+    <Compile Include="IKey.cs" />
     <Compile Include="Life.cs" />
     <Compile Include="MainLifeGame.cs" />
+    <Compile Include="MoveDown.cs" />
+    <Compile Include="MoveLeft.cs" />
+    <Compile Include="MoveRight.cs" />
+    <Compile Include="MoveUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
