--- a/LifeGame_/LifeGame.csproj
+++ b/LifeGame_/LifeGame.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
-    <Compile Include="Action.cs" />
+    <Compile Include="KeyRead.cs" />
     <Compile Include="CellState.cs" />
     <Compile Include="ExitInput.cs" />
     <Compile Include="ICommand.cs" />
