--- a/LifeGame_/LifeGame.csproj
+++ b/LifeGame_/LifeGame.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="Keyboard.cs" />
     <Compile Include="KeyRead.cs" />
     <Compile Include="CellState.cs" />
     <Compile Include="ExitInput.cs" />
